tdf#134029 Chart view: enable to move data label

if the position is 'Best Fit' and the data label is
outside from the pie chart.

To check the functionality of the patch: open the attached file
http://bugs.documentfoundation.org/attachment.cgi?id=162039 and
move the data label.

Change-Id: I88546c64dd62ab40b35400b0330f7899ba09123f